ui: fix image styling and remove footer overlap

--- a/app/assets/styles/partials/_alumni.scss
+++ b/app/assets/styles/partials/_alumni.scss
@@ -35,7 +35,7 @@
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 	margin-top: 3.2rem;
-	height: 80vh;
+	height: 72vh;
 	overflow-y: scroll;
 }
 
