--- a/app/assets/styles/partials/_mixins.scss
+++ b/app/assets/styles/partials/_mixins.scss
@@ -12,8 +12,7 @@
     right: 0;
     bottom: 0;
     overflow: hidden;
-    border-radius: 50%;
-    background: #eee no-repeat center;
+    // background: #eee no-repeat center;
     background-size: cover;
   }
 
